--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="image"></div>
+        <span id="tip">Dica: </span>
         <div id="keyword">⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽</div>
 
         <section id="keyboard">
@@ -40,7 +41,7 @@
             <button class="btKey" id="z">Z</button>
         </section>
 
-        <span id="tip"></span>
     </div>
+    <script src="./js/index.js"></script>
 </body>
 </html>
