--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="image"></div>
-        <span id="tip">Dica: </span>
+        <span id="tip"><b>Dica: </b></span>
         <div id="keyword">⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽</div>
 
         <section id="keyboard">
