--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="image"></div>
         <span id="tip"><b>Dica: </b></span>
-        <div id="keyword">⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽⎽</div>
+        <div id="keyword"></div>
 
         <section id="keyboard">
             <button class="btKey" id="a">A</button>
@@ -37,6 +37,7 @@
             <button class="btKey" id="u">U</button>
             <button class="btKey" id="v">V</button>
             <button class="btKey" id="w">W</button>
+            <button class="btKey" id="w">X</button>
             <button class="btKey" id="y">Y</button>
             <button class="btKey" id="z">Z</button>
         </section>
